# WinCppTemplate

./: CMakeLists.txt  README.md
scripts/: lcompile.ps1  llaunch.ps1  lrun.ps1  lsp-ccdb.ps1  ltask.ps1
src/: main.cpp
